--- a/android/build.gradle
+++ b/android/build.gradle
@@ -53,6 +53,11 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 repositories {
@@ -73,7 +78,6 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
-    implementation project(':blufi.espressif')
 }
 
 def configureReactNativePom(def pom) {
